--- a/presentation.html
+++ b/presentation.html
@@ -8,19 +8,34 @@
     <link rel="stylesheet" href="node_modules/reveal.js/css/theme/simple.css">
     <link rel="stylesheet" href="theme/css/developers.nl.css">
 
+    <link rel="stylesheet" href="assets/style.css">
+
     <link href='http://fonts.googleapis.com/css?family=Roboto%20Mono' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div class="reveal">
+<div class="reveal large-sun">
+    <div id="white-pane" style="display: none;"></div>
+    <div id="clouds" class="hidden">
+        <div class="cloud-1"></div>
+        <div class="cloud-2"></div>
+    </div>
+
     <div class="slides">
+        <section class="first-slide with-clouds">
+            <article>
+                <h1>Several years of SOLID-aware development</h1>
+                <h3>Or: How other programmers keep making my work harder</h3>
+            </article>
+        </section>
+
         <section>
-            <aside>
+            <header>
                 <h2>About me</h2>
                 <h4>Who the hell is this guy?</h4>
-            </aside>
+            </header>
             <article>
-                <img src="img/jasper.jpg" style="position: absolute; right: .5em; top: .5em; border: none; border-radius: 150px;">
-                <ul>
+                <img src="assets/jasper.jpg" style="position: absolute; right: 2.5em; top: .5em; border: none; border-radius: 150px;">
+                <ul style="line-height: 1.3;">
                     <li>Jasper Stafleu</li>
                     <li>
                         Developers.nl
@@ -47,22 +62,115 @@
                     </li>
                 </ul>
             </article>
+            <aside class="speaker-notes">
+                <ul>
+                    <li>Notes!</li>
+                </ul>
+            </aside>
         </section>
 
         <section>
-            <aside>
-                <h2>Next</h2>
-                <h4>Snide remark</h4>
-            </aside>
+            <header>
+                <h2>SOLID</h2>
+                <h4><abbr title="Yet another acronym">YAA</abbr>: Yet another acronym</h4>
+            </header>
             <article>
-                Random text
+                <ul class="acronym">
+                    <li>Single Responsibility</li>
+                    <li>Open-Closed</li>
+                    <li class="fragment replace-out" data-fragment-index="1">Liskov Substitution</li>
+                    <li class="fragment replace-in underline" data-fragment-index="1">Liskov Substitution</li>
+                    <li>Interface Segregation</li>
+                    <li class="fragment replace-out" data-fragment-index="1">Dependency Inversion</li>
+                    <li class="fragment replace-in underline" data-fragment-index="1">Dependency Inversion</li>
+                </ul>
             </article>
+        </section>
+
+        <section class="with-clouds">
+            <article>
+                <h1>Single Responsibility</h1>
+                <h3>My precioussss...</h3>
+            </article>
+        </section>
+
+        <section class="with-clouds">
+            <article>
+                <h1>Interface Segregation</h1>
+                <h3>Interfaces have responsibilities as well. Really!</h3>
+            </article>
+        </section>
+
+        <section class="with-clouds">
+            <article>
+                <h1>Open / Closed</h1>
+                <h3>Don’t touch me!<br/>
+                    Let’s make kids instead</h3>
+            </article>
+        </section>
+
+        <section>
+            <section class="with-clouds">
+                <article>
+                    <h1>Liskov Substitution</h1>
+                    <h3>Keep your promises!</h3>
+                </article>
+            </section>
+
+            <section>
+                <header>
+                    <h2>Other stuff</h2>
+                </header>
+                <article>
+                    Text
+                </article>
+            </section>
+        </section>
+
+
+        <section>
+            <section class="with-clouds">
+                <article>
+                    <h1>Dependency Inversion</h1>
+                    <h3>I’m not responsible for my kids actions</h3>
+                </article>
+            </section>
+
+            <section>
+                <header>
+                    <h2>Other stuff</h2>
+                </header>
+                <article>
+                    Text
+                </article>
+            </section>
+        </section>
+
+
+        <section>
+            <section class="with-clouds">
+                <article>
+                    <h1>Questions?</h1>
+                    <h3>No, everything was absolutely clear, and I’ll never do things wrong again</h3>
+                </article>
+            </section>
+
+            <section>
+                <header>
+                    <h2>Joind.In</h2>
+                    <h4>Act as if I care</h4>
+                </header>
+                <article>
+                    <a href="?">Room for joind.in link...</a>
+                </article>
+            </section>
         </section>
     </div>
 </div>
 
 <script src="node_modules/reveal.js/lib/js/head.min.js"></script>
 <script src="node_modules/reveal.js/js/reveal.js"></script>
+<script src="theme/js/developers.nl.js"></script>
 
 <script>
     // More info https://github.com/hakimel/reveal.js#configuration
@@ -70,12 +178,13 @@
         controls: false,
         history: true,
         center: false,
-        transition: 'fast',
+        backgroundTransition: 'none',
+        transition: 'zoom', // none/fade/slide/convex/concave/zoom
         zoomKey: 'ctrl',
         progress: false,
 
-        width: 1680,
-        height: 1050,
+        width: '100%',
+        height: '100%',
         margin: 0,
 
         // More info https://github.com/hakimel/reveal.js#dependencies
