master: More sematic use of headers

--- a/presentation.html
+++ b/presentation.html
@@ -26,7 +26,7 @@
             <article>
                 <header>
                     <h1>Several years of SOLID-aware development</h1>
-                    <h3>Or: How other programmers keep making my work harder</h3>
+                    <small>Or: How other programmers keep making my work harder</small>
                 </header>
             </article>
         </section>
@@ -34,7 +34,7 @@
         <section>
             <header>
                 <h2>About me</h2>
-                <h4>Who the hell is this guy?</h4>
+                <small>Who the hell is this guy?</small>
             </header>
             <article>
                 <figure class="jasper-logo">
@@ -70,7 +70,7 @@
         <section>
             <header>
                 <h2>SOLID</h2>
-                <h4><abbr title="Yet another acronym">YAA</abbr>: Yet another acronym</h4>
+                <small><abbr title="Yet another acronym">YAA</abbr>: Yet another acronym</small>
             </header>
             <article>
                 <ul class="acronym">
@@ -91,8 +91,10 @@
 
         <section class="with-clouds">
             <article>
-                <h1>Single Responsibility</h1>
-                <h3>My precioussss...</h3>
+                <header>
+                    <h2>Single Responsibility</h2>
+                    <small>My precioussss...</small>
+                </header>
             </article>
             <aside class="notes">
                 <ul>
@@ -104,8 +106,10 @@
 
         <section class="with-clouds">
             <article>
-                <h1>Interface Segregation</h1>
-                <h3>Interfaces have responsibilities as well. Really!</h3>
+                <header>
+                    <h2>Interface Segregation</h2>
+                    <small>Interfaces have responsibilities as well. Really!</small>
+                </header>
             </article>
             <aside class="notes">
                 <ul>
@@ -117,16 +121,17 @@
 
         <section class="with-clouds">
             <article>
-                <h1>Open / Closed</h1>
-                <h3>Don’t touch me!<br/>
-                    Let’s make kids instead</h3>
+                <header>
+                    <h2>Open / Closed</h2>
+                    <small>Don’t touch me!<br/> Let’s make kids instead</small>
+                </header>
             </article>
             <aside class="speaker-notes">
-                <h3>Closed</h3>
+                <b>Closed</b>
                 <ul>
                     <li>PHP: Used to be a problem, until the rise of composer</li>
                 </ul>
-                <h3>Open</h3>
+                <b>Open</b>
                 <ul>
                     <li>Mainly a problem for library code</li>
                     <li>PHP: Often a problem
@@ -142,14 +147,16 @@
         <section>
             <section class="with-clouds">
                 <article>
-                    <h1>Liskov Substitution</h1>
-                    <h3>Keep your promises!</h3>
+                    <header>
+                        <h2>Liskov Substitution</h2>
+                        <small>Keep your promises!</small>
+                    </header>
                 </article>
             </section>
 
             <section>
                 <header>
-                    <h2>Example</h2>
+                    <h3>Example</h3>
                 </header>
                 <article>
                     <pre><code class="php" data-trim data-noescape>
@@ -185,8 +192,8 @@ class Origami
 
             <section>
                 <header>
-                    <h1></h1>
                     <h3></h3>
+                    <small></small>
                 </header>
                 <article>
                     ?
@@ -203,14 +210,16 @@ class Origami
         <section>
             <section class="with-clouds">
                 <article>
-                    <h1>Dependency Inversion</h1>
-                    <h3>I’m not responsible for my kids' actions</h3>
+                    <header>
+                        <h2>Dependency Inversion</h2>
+                        <small>I’m not responsible for my kids' actions</small>
+                    </header>
                 </article>
             </section>
 
             <section>
                 <header>
-                    <h2>Other stuff</h2>
+                    <h3>Other stuff</h3>
                 </header>
                 <article>
                     Text
@@ -222,15 +231,17 @@ class Origami
         <section>
             <section class="with-clouds">
                 <article>
-                    <h1>Questions?</h1>
-                    <h3>No, everything was absolutely clear, and I’ll never do things wrong again</h3>
+                    <header>
+                        <h2>Questions?</h2>
+                        <small>No, everything was absolutely clear, and I’ll never do things wrong again</small>
+                    </header>
                 </article>
             </section>
 
             <section>
                 <header>
-                    <h2>Joind.In</h2>
-                    <h4>Remember: Act as if I care</h4>
+                    <h3>Joind.In</h3>
+                    <small>Remember: Act as if I care</small>
                 </header>
                 <article>
                     <a href="?">Room for joind.in link...</a>
